--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@types/uuid": "^8.3.4",
     "expo": "~45.0.0",
+    "expo-constants": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "luxon": "^2.4.0",
@@ -22,10 +26,10 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "0.17.7",
     "react-singleton-hook": "^3.4.0",
-    "valivalue": "^1.0.0",
-    "expo-constants": "~13.1.1"
+    "valivalue": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
